Added UPDATE and DELETE methods

--- a/src/main/webapp/WEB-INF/views/accounts/index.html
+++ b/src/main/webapp/WEB-INF/views/accounts/index.html
@@ -10,5 +10,10 @@
     <a th:href="@{/accounts/{id}(id=${account.getId()})}" th:text="${account.getName()}">user</a>
 </div>
 
+<br/>
+<hr/>
+
+<a href="/accounts/new">Create new account</a>
+
 </body>
 </html>
