--- a/src/main/webapp/WEB-INF/views/accounts/show.html
+++ b/src/main/webapp/WEB-INF/views/accounts/show.html
@@ -7,5 +7,12 @@
 <body>
 <p th:text="${account.getName()}">VALUE</p>
 <p th:text="${account.getId()}">VALUE</p>
+
+<a th:href="@{/accounts/{id}/edit(id=${account.getId()})}">Edit</a>
+
+<form th:method="DELETE" th:action="@{/accounts/{id}(id=${account.getId()})}">
+    <input type="submit" value="Delete"/>
+</form>
+
 </body>
 </html>
